--- a/nameless.html
+++ b/nameless.html
@@ -12,6 +12,7 @@
       const user = getJson(`https://api.github.com/users/lwnash`)
 
       console.log(user)
+      // 当然是 undefined， 因为 getJson() 返回的是一个 Promise。。。。
       console.log(user.avatar_url)
     </script>
   </body>
